cluster/policy/allowed-repos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-repos
spec:
  match:
    kinds:
      - apiGrounds: [""]
        kinds: ["Pods"]
  parameters:
    repos:
      - "gcr.io"
