cluster/policy/run-as-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-allowed-user-ranges
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["microservices-demo", "istio-system"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot # MustRunAsNonRoot # RunAsAny
